--- a/js/packages/fair-launch/public/index.html
+++ b/js/packages/fair-launch/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://static.wixstatic.com/media/a70148_09bcfa1baa184979ad01baa78a6c0df8~mv2.png/v1/fill/w_196,h_196,al_c,q_85,usm_0.66_1.00_0.01/a70148_09bcfa1baa184979ad01baa78a6c0df8~mv2.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
